--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "tslint-config-airbnb": "^5.11.1",
     "typeorm": "^0.2.18",
     "typeorm-model-generator": "^0.3.4",
-    "typescript": "3.7.2",
+    "typescript": "^3.7.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
